--- a/src/commonStyles/styles/header.css
+++ b/src/commonStyles/styles/header.css
@@ -1,12 +1,13 @@
 .header{
     background-color: #051505;
+}
+.header .cnt{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 .header .logo{
     width: 220px;
-    margin: 0 50px;
 }
 .header .logo img{
     width: 100%;
@@ -14,19 +15,24 @@
 .header .navbar{
     display: flex;
     align-items: center;
+    padding: 8px 0;
 }
 .header .navbar ul{
     list-style-type: none;
     margin: 0;
 }
 .header .navbar ul li{
-    padding: 24px 40px;
+    margin: 0 40px;
     display: inline-block;
 }
 .header .navbar ul li:last-child{
-    padding-right: 50px;
+    margin-right: 0;
+}
+.header .navbar ul li:last-child{
+    margin-right: 0px;
 }
 .header .navbar ul .item a{
+    padding: 16px 4px;
     display: inline-block;
     width: 100%;
     height: 100%;
@@ -34,4 +40,5 @@
     color: #FFFFFF;
     text-transform: uppercase;
     font-size: 1rem;
+    line-height: 1.5;
 }
